<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--基础的，用于其应用复用它-->
    <string name="save_share">分享到</string>
    <string name="sure">确定</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>


    <string name="app_name">表情DIY</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_main">暴走P图</string>
    <string name="open">zzzz</string>
    <string name="close">zzs</string>
    <string name="pen">钢笔</string>
    <string name="shape">形状</string>
    <string name="swear">涂抹</string>
    <string name="rubber">橡皮</string>
    <string name="cut_scale">比例</string>
    <string name="cut_rotate">旋转</string>
    <string name="cut_reversal">翻转</string>
    <string name="cut_fixed_size">尺寸</string>
    <string name="title_chose_picture">选择图片</string>
    <string name="save_size">图片大小(省流发送)</string>
    <string name="save_set_dialog_name">保存设置</string>
    <string name="latest_pic">最新图片</string>
    <string name="mat_face">抠脸</string>
    <string name="make_expression">制作表情</string>

    <string name="draw">绘图</string>
    <string name="cut">裁剪旋转</string>
    <string name="text">文字</string>
    <string name="tietu">贴图</string>
    <string name="mat">抠图</string>
    <string name="the_return">返回</string>
    <string name="share_add">分享+</string>
    <string name="latest_use">最近使用</string>
    <string name="recent_pic">最近图片</string>
    <string name="prefer_pic">喜爱图片</string>
    <string name="setting">设置</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="synthesis_image">调色</string>
</resources>
