<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_corner_shape"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/save_set_dialog_name"
        android:textSize="10pt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/save_share"
        android:textSize="7pt" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_save_set_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/save_size"
        android:textSize="7pt" />

    <include layout="@layout/list_save_set_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_save_set_sure"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_round_warm_red"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:minHeight="45dp"
            android:text="@string/save"
            android:textSize="12pt" />

        <TextView
            android:id="@+id/tv_save_set_cancel"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/background_round_grey"
            android:gravity="center"
            android:text="@string/cancel"
            android:minHeight="45dp"
            android:textColor="#fff"
            android:textSize="12pt" />
    </LinearLayout>
</LinearLayout>