<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/function_total_layout"
    app:layout_constraintHorizontal_chainStyle="spread">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cut_fix_size"
        style="@style/function_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cut_fixed_ratio"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/function_image"
            android:background="@drawable/function_background_cut_blue"
            android:src="@mipmap/fixed_size"
            app:layout_constraintBottom_toTopOf="@+id/cut_fixed_guideline"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/function_text"
            android:text="@string/cut_fixed_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cut_fixed_guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/cut_fixed_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.666" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cut_fixed_ratio"
        style="@style/function_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/cut_fix_size"
        app:layout_constraintRight_toLeftOf="@+id/cut_rotate"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/function_image"
            android:background="@drawable/function_background_cut_blue"
            android:src="@mipmap/scale"
            android:padding="7dp"
            app:layout_constraintBottom_toTopOf="@+id/cut_fixed_ratio_guideline"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/function_text"
            android:text="@string/cut_scale"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cut_fixed_ratio_guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/cut_fixed_ratio_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.666" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cut_rotate"
        style="@style/function_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/cut_fixed_ratio"
        app:layout_constraintRight_toLeftOf="@+id/cut_reversal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/function_image"
            android:background="@drawable/function_background_cut_blue"
            android:src="@mipmap/rotate"
            app:layout_constraintBottom_toTopOf="@+id/cut_rotate_guideline"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            style="@style/function_text"
            android:text="@string/cut_rotate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cut_rotate_guideline" />
        <android.support.constraint.Guideline
            android:id="@+id/cut_rotate_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.666" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cut_reversal"
        style="@style/function_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/cut_rotate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_function_cut_iv"
            style="@style/function_image"
            android:src="@mipmap/reversal"
            android:background="@drawable/function_background_cut_blue"
            app:layout_constraintBottom_toTopOf="@+id/cut_reversal_guideline"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_function_cut_tv"
            style="@style/function_text"
            android:text="@string/cut_reversal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cut_reversal_guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/cut_reversal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.666" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
