<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/function_total_layout"
    app:layout_constraintHorizontal_chainStyle="spread">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_function_cut"
        style="@style/function_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/main_function_text"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_function_cut_iv"
            style="@style/function_image"
            android:src="@mipmap/edit"
            android:background="@drawable/function_background_cut_blue"
            app:layout_constraintBottom_toTopOf="@+id/cut_guideline"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_function_cut_tv"
            style="@style/function_text"
            android:text="@string/cut"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cut_guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/cut_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.666" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_function_text"
        style="@style/function_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/main_function_cut"
        app:layout_constraintRight_toLeftOf="@+id/main_function_tietu"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_function_text_iv"
            style="@style/function_image"
            android:src="@mipmap/text"
            android:background="@drawable/function_background_text_yellow"
            app:layout_constraintBottom_toTopOf="@+id/text_guideline"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_function_text_tv"
            style="@style/function_text"
            android:text="@string/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/text_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.666" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_function_tietu"
        style="@style/function_layout"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/main_function_text"

        app:layout_constraintRight_toLeftOf="@+id/main_function_draw"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_function_tietu_iv"
            style="@style/function_image"
            android:src="@mipmap/tietu"
            android:padding="6dp"
            android:background="@drawable/function_background_tietu_green"
            app:layout_constraintBottom_toTopOf="@+id/tietu_guideline"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_function_tietu_tv"
            style="@style/function_text"
            android:text="@string/tietu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tietu_guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/tietu_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.666" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_function_draw"
        style="@style/function_layout"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/main_function_tietu"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_function_draw_iv"
            style="@style/function_image"
            android:src="@mipmap/draw"
            android:background="@drawable/function_background__draw_pink"
            app:layout_constraintBottom_toTopOf="@+id/draw_guideline"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_function_draw_tv"
            style="@style/function_text"
            android:text="@string/draw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/draw_guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/draw_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.666" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>